fix: optimize index.js and make code more readable

--- a/src/style.css
+++ b/src/style.css
@@ -128,7 +128,6 @@ nav,
 
 .nav-right,
 .nav-middle {
-	gap: 16px;
 	gap: 2.2rem;
 }
 
